# cpp-sdl2-game-template

./: CMakeLists.txt  Rakefile
cmake/: FindSDL2.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
src/: game.hpp  game_object.hpp  main.cpp  scene.cpp  scene.hpp  scene_manager.hpp
